--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,3 +41,9 @@ telegram:
     webhook:
       url: ${TELEGRAM_WEBHOOK_URL}      
       token: ${TELEGRAM_BOT_TOKEN}    
+
+openai:
+    api-key: ${OPENAI_API_KEY}
+    model: ${OPENAI_MODEL:gpt-3.5-turbo}
+    temperature: ${OPENAI_TEMPERATURE:0.7}
+    max-tokens: ${OPENAI_MAX_TOKENS:1000}      
