--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -43,5 +43,25 @@
     "name": "telegram.webhook.token",
     "type": "java.lang.String",
     "description": "A description for 'telegram.webhook.token'"
+  },
+  {
+    "name": "openai.model",
+    "type": "java.lang.String",
+    "description": "A description for 'openai.model'"
+  },
+  {
+    "name": "openai.api-key",
+    "type": "java.lang.String",
+    "description": "A description for 'openai.api-key'"
+  },
+  {
+    "name": "openai.temperature",
+    "type": "java.lang.String",
+    "description": "A description for 'openai.temperature'"
+  },
+  {
+    "name": "openai.max-tokens",
+    "type": "java.lang.String",
+    "description": "A description for 'openai.max-tokens'"
   }
 ]}
