--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// OpenAPI/Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.9'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+
     // Telegram Bot API
 	implementation 'org.telegram:telegrambots-springboot-webhook-starter:9.0.0'
 	implementation 'org.telegram:telegrambots-meta:9.0.0'
