--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ springdoc:
 
 openapi:
     service:
-        title: "TAF Development API"
+        title: "OrdinaInChat Rest API"
         version: 1.0.0
         url: ${OPENAPI_URL:http://localhost:8080/v3/api-docs}         
 
