--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,49 +1,66 @@
 server:
-    port: 8080
+  port: 8080
 
 spring:
-    profiles:
-        active: dev
-    application:
-        name: ordinainchat
-    data:
-        mongodb:
-            authentication-database: admin
-            database: ${SPRING_DATA_MONGODB_DATABASE:ordinainchat-db}
-            host: ${SPRING_DATA_MONGODB_HOST:localhost}
-            password: ${SPRING_DATA_MONGODB_PASSWORD:secr3t}
-            port: ${SPRING_DATA_MONGODB_PORT:6481}
-            username: ${SPRING_DATA_MONGODB_USERNAME:admin}
-            auto-index-creation: true        
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
+
+  application:
+    name: ordinainchat
+
+  # Datasource JPA/PostgreSQL (valori di default; possono essere sovrascritti da .env)
+  datasource:
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ordinainchat}
+    username: ${SPRING_DATASOURCE_USERNAME:ordinainchat}
+    password: ${SPRING_DATASOURCE_PASSWORD:change_me}
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
+
+  jpa:
+    hibernate:
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: ${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+        jdbc.lob.non_contextual_creation: true
+        format_sql: true
+    show-sql: false
+
+  flyway:
+    enabled: ${SPRING_FLYWAY_ENABLED:true}
+    baseline-on-migrate: ${SPRING_FLYWAY_BASELINE_ON_MIGRATE:true}
+    # locations: classpath:db/migration   # default, ok così
 
 springdoc:
-    api-docs:
-        path: /api-docs
-    swagger-ui:
-        path: /swagger-ui.html  
-        operationsSorter: method        
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
 
 openapi:
-    service:
-        title: "OrdinaInChat Rest API"
-        version: 1.0.0
-        url: ${OPENAPI_URL:http://localhost:8080/v3/api-docs}         
+  service:
+    title: "OrdinaInChat Rest API"
+    version: 1.0.0
+    url: ${OPENAPI_URL:http://localhost:8080/v3/api-docs}
 
 telegrambots:
-    enabled: true
-    webhook-bots:
-        - bot-path: ${TELEGRAM_BOT_PATH}
-          username: ${TELEGRAM_BOT_NAME}
-          token: ${TELEGRAM_BOT_TOKEN}
-          secret: ${TELEGRAM_BOT_SECRET:}
+  enabled: true
+  webhook-bots:
+    - bot-path: ${TELEGRAM_BOT_PATH:/api/telegram/webhook}
+      username: ${TELEGRAM_BOT_NAME:OrdinainChatBot}
+      token: ${TELEGRAM_BOT_TOKEN}
+      secret: ${TELEGRAM_BOT_SECRET:}
 
 telegram:
-    webhook:
-      url: ${TELEGRAM_WEBHOOK_URL}      
-      token: ${TELEGRAM_BOT_TOKEN}    
+  webhook:
+    url: ${TELEGRAM_WEBHOOK_URL:http://localhost:8080/api/telegram/webhook}
+    token: ${TELEGRAM_BOT_TOKEN}
 
 openai:
-    api-key: ${OPENAI_API_KEY}
-    model: ${OPENAI_MODEL:gpt-3.5-turbo}
-    temperature: ${OPENAI_TEMPERATURE:0.7}
-    max-tokens: ${OPENAI_MAX_TOKENS:1000}      
+  api-key: ${OPENAI_API_KEY}
+  model: ${OPENAI_MODEL:gpt-5.1-mini}
+  temperature: ${OPENAI_TEMPERATURE:0}
+  max-tokens: ${OPENAI_MAX_TOKENS:600}
